--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "15.5.5",
+    "next-auth": "^5.0.0-beta.29",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0"
   },
